--- a/Exercicios/Exercicio_de_sala/Exercicio04.ipynb
+++ b/Exercicios/Exercicio_de_sala/Exercicio04.ipynb
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 89,
    "metadata": {
     "collapsed": false
    },
@@ -515,7 +515,7 @@
        "4  NaN  50"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false
    },
@@ -696,14 +696,69 @@
        "4  50"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df2 = pd.concat([df1,df])\n",
-    "df2"
+    "df2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>y</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>x</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>z</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    a   b\n",
+       "y NaN NaN\n",
+       "x NaN NaN\n",
+       "z NaN NaN"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.reindex(index={\"x\",\"y\",\"z\"})#POG Programação Orietada a Gamboarra"
    ]
   }
  ],
